<resources>
    <string name="app_name">Calculator</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="div_sign">÷</string>
    <string name="mult_sign">x</string>
    <string name="clear_sign">DEL</string>
    <string name="enter_sign">ENTER</string>
    <string name="dec_sign">.</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="pi_sign">π</string>
    <string name="e_sign">e</string>
    <string name="exp_sign">^</string>

</resources>
