<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="nettleton.sam.stackcalculator.MainActivity">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:grid="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView android:id="@+id/stack_6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/default_gap"
        android:layout_marginRight="@dimen/default_gap"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginLeft="@dimen/default_gap"
        android:gravity="center_vertical|end"
        android:layout_weight="1" />

    <TextView android:id="@+id/stack_5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/default_gap"
        android:layout_marginRight="@dimen/default_gap"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginLeft="@dimen/default_gap"
        android:gravity="center_vertical|end"
        android:layout_weight="1" />

    <TextView android:id="@+id/stack_4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/default_gap"
        android:layout_marginRight="@dimen/default_gap"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginLeft="@dimen/default_gap"
        android:gravity="center_vertical|end"
        android:layout_weight="1" />

    <TextView android:id="@+id/stack_3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/default_gap"
        android:layout_marginRight="@dimen/default_gap"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginLeft="@dimen/default_gap"
        android:gravity="center_vertical|end"
        android:layout_weight="1" />

    <TextView android:id="@+id/stack_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/default_gap"
        android:layout_marginRight="@dimen/default_gap"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginLeft="@dimen/default_gap"
        android:gravity="center_vertical|end"
        android:layout_weight="1" />

    <TextView android:id="@+id/stack_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/default_gap"
        android:layout_marginRight="@dimen/default_gap"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginLeft="@dimen/default_gap"
        android:gravity="center_vertical|end"
        android:layout_weight="1" />

    <TextView android:id="@+id/number_field"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/default_gap"
        android:layout_marginRight="@dimen/default_gap"
        android:layout_marginStart="@dimen/default_gap"
        android:layout_marginLeft="@dimen/default_gap"
        android:gravity="center_vertical|end"
        android:layout_weight="5"
        android:textSize="32sp" />

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        app:columnCount="4"
        app:rowCount="5" >

        <TextView android:id="@+id/sign_pi"
            app:layout_column="0"
            app:layout_row="0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorNumbers"
            android:gravity="center"
            android:text="@string/pi_sign"
            android:textColor="@color/colorWhite"
            android:textSize="32sp"
            android:clickable="true" />

        <TextView android:id="@+id/num_7"
            app:layout_column="0"
            app:layout_row="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorNumbers"
            android:gravity="center"
            android:textSize="32sp"
            android:text="@string/num7"
            android:textColor="@color/colorWhite"
            android:clickable="true" />

        <TextView android:id="@+id/num_4"
            app:layout_column="0"
            app:layout_row="2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorNumbers"
            android:gravity="center"
            android:textSize="32sp"
            android:text="@string/num4"
            android:textColor="@color/colorWhite"
            android:clickable="true" />

        <TextView android:id="@+id/num_1"
            app:layout_column="0"
            app:layout_row="3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorNumbers"
            android:gravity="center"
            android:textSize="32sp"
            android:text="@string/num1"
            android:textColor="@color/colorWhite"
            android:clickable="true" />

        <TextView android:id="@+id/sign_dec"
            app:layout_column="0"
            app:layout_row="4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorNumbers"
            android:gravity="center"
            android:text="@string/dec_sign"
            android:textColor="@color/colorWhite"
            android:textSize="32sp"
            android:clickable="true" />

        <TextView android:id="@+id/sign_e"
            app:layout_column="1"
            app:layout_row="0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorNumbers"
            android:gravity="center"
            android:text="@string/e_sign"
            android:textColor="@color/colorWhite"
            android:textSize="32sp"
            android:clickable="true" />

        <TextView android:id="@+id/num_8"
            app:layout_column="1"
            app:layout_row="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorNumbers"
            android:gravity="center"
            android:textSize="32sp"
            android:text="@string/num8"
            android:textColor="@color/colorWhite"
            android:clickable="true" />

        <TextView android:id="@+id/num_5"
            app:layout_column="1"
            app:layout_row="2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorNumbers"
            android:gravity="center"
            android:textSize="32sp"
            android:text="@string/num5"
            android:textColor="@color/colorWhite"
            android:clickable="true" />

        <TextView android:id="@+id/num_2"
            app:layout_column="1"
            app:layout_row="3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorNumbers"
            android:gravity="center"
            android:textSize="32sp"
            android:text="@string/num2"
            android:textColor="@color/colorWhite"
            android:clickable="true" />

        <TextView android:id="@+id/num_0"
            app:layout_column="1"
            app:layout_row="4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorNumbers"
            android:gravity="center"
            android:textSize="32sp"
            android:text="@string/num0"
            android:textColor="@color/colorWhite"
            android:clickable="true" />

        <TextView android:id="@+id/sign_exp"
            app:layout_column="3"
            app:layout_row="0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorSymbols"
            android:gravity="center"
            android:text="@string/exp_sign"
            android:textColor="@color/colorWhite"
            android:textSize="32sp"
            android:clickable="true" />

        <TextView android:id="@+id/num_9"
            app:layout_column="2"
            app:layout_row="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorNumbers"
            android:gravity="center"
            android:textSize="32sp"
            android:text="@string/num9"
            android:textColor="@color/colorWhite"
            android:clickable="true"
            />

        <TextView android:id="@+id/num_6"
            app:layout_column="2"
            app:layout_row="2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorNumbers"
            android:gravity="center"
            android:textSize="32sp"
            android:text="@string/num6"
            android:textColor="@color/colorWhite"
            android:clickable="true" />

        <TextView android:id="@+id/num_3"
            app:layout_column="2"
            app:layout_row="3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorNumbers"
            android:gravity="center"
            android:textSize="32sp"
            android:text="@string/num3"
            android:textColor="@color/colorWhite"
            android:clickable="true" />

        <TextView android:id="@+id/sign_enter"
            app:layout_column="2"
            app:layout_row="4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorEnter"
            android:gravity="center"
            android:text="@string/enter_sign"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:clickable="true" />

        <TextView android:id="@+id/sign_clr"
            app:layout_column="2"
            app:layout_row="0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorNumbers"
            android:gravity="center"
            android:text="@string/clear_sign"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:clickable="true" />

        <TextView android:id="@+id/sign_div"
            app:layout_column="3"
            app:layout_row="1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorSymbols"
            android:gravity="center"
            android:text="@string/div_sign"
            android:textColor="@color/colorWhite"
            android:textSize="32sp"
            android:clickable="true" />

        <TextView android:id="@+id/sign_mult"
            app:layout_column="3"
            app:layout_row="2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorSymbols"
            android:gravity="center"
            android:text="@string/mult_sign"
            android:textColor="@color/colorWhite"
            android:textSize="32sp"
            android:clickable="true" />

        <TextView android:id="@+id/sign_minus"
            app:layout_column="3"
            app:layout_row="3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorSymbols"
            android:gravity="center"
            android:text="@string/minus_sign"
            android:textColor="@color/colorWhite"
            android:textSize="32sp"
            android:clickable="true" />

        <TextView android:id="@+id/sign_plus"
            app:layout_column="3"
            app:layout_row="4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_gravity="fill_horizontal|fill_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/colorSymbols"
            android:gravity="center"
            android:text="@string/plus_sign"
            android:textColor="@color/colorWhite"
            android:textSize="32sp"
            android:clickable="true" />

    </android.support.v7.widget.GridLayout>

</LinearLayout>

</android.support.design.widget.CoordinatorLayout>